--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -16,8 +16,8 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="quick_start_apps_title">Quick Start Apps</string>
-    <string name="quick_start_apps_summary">Select apps to launch quickly</string>
+    <string name="quick_start_apps_title">Applications de démarrage rapide</string>
+    <string name="quick_start_apps_summary">Sélectionnez les applications à lancer rapidement</string>
     <string name="settings_title">Espace Jeux</string>
     <string name="settings_summary">Gérez votre configuration de jeu</string>
     <!-- Game options -->
