--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -16,8 +16,8 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="quick_start_apps_title">Quick Start Apps</string>
-    <string name="quick_start_apps_summary">Select apps to launch quickly</string>
+    <string name="quick_start_apps_title">Gyorsindítási alkalmazások</string>
+    <string name="quick_start_apps_summary">Válassza ki a gyorsan indítandó alkalmazásokat</string>
     <string name="settings_title">Játéktér</string>
     <string name="settings_summary">Játékbeállítások kezelése</string>
     <!-- Game options -->
