New Crowdin updates (#102)
* New translations strings.xml (Japanese)

* New translations strings.xml (Slovak)

--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -16,8 +16,8 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="quick_start_apps_title">Quick Start Apps</string>
-    <string name="quick_start_apps_summary">Select apps to launch quickly</string>
+    <string name="quick_start_apps_title">クイックスタートするアプリ</string>
+    <string name="quick_start_apps_summary">素早く起動するアプリを選択</string>
     <string name="settings_title">ゲームスペース</string>
     <string name="settings_summary">ゲームの設定を管理</string>
     <!-- Game options -->
