--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Core strings from earlier -->
     <string name="settings_title">Game Space</string>
     <string name="settings_summary">Manage your gaming setup</string>
     <string name="in_game_preferences_title">In-game options</string>
@@ -12,4 +13,36 @@
     <string name="ringer_mode_vibrate">Vibrate</string>
     <string name="ringer_mode_normal">Normal</string>
     <string name="ringer_mode_no_change">Do not change</string>
+
+    <!-- Missing strings from the error log -->
+    <string name="app_search_title">Search</string>
+    <string name="app_selector_label">Select apps</string>
+    <string name="battery_format">%d%%</string>
+    <string name="cant_find_angle_pkg">ANGLE package not found</string>
+    <string name="custom_seekbar_default_value">Default: %d</string>
+    <string name="custom_seekbar_default_value_is_set">Default value set</string>
+    <string name="custom_seekbar_default_value_to_set">Set default value</string>
+    <string name="custom_seekbar_value">Value: %d</string>
+    <string name="danmaku_notification_mode_summary">Show notifications as danmaku</string>
+    <string name="danmaku_notification_mode_title">Danmaku notifications</string>
+    <string name="fps_Info_title">FPS Info</string>
+    <string name="game_list_add_title">Add game</string>
+    <string name="game_list_title">Game list</string>
+    <string name="game_mode_battery">Battery</string>
+    <string name="game_mode_performance">Performance</string>
+    <string name="game_mode_standard">Standard</string>
+    <string name="game_mode_title">Game mode</string>
+    <string name="game_mode_unsupported">Unsupported</string>
+    <string name="game_remove_message">Remove this game?</string>
+    <string name="gamespace_menu_opacity_title">Menu opacity</string>
+    <string name="in_game_calls_auto_answer">Auto-answer</string>
+    <string name="in_game_calls_auto_reject">Auto-reject</string>
+    <string name="in_game_calls_no_action">No action</string>
+    <string name="in_game_calls_received_number">Received: %d</string>
+    <string name="in_game_calls_rejected_number">Rejected: %d</string>
+    <string name="in_game_calls_title">In-game calls</string>
+    <string name="lock_gesture_title">Lock gesture</string>
+    <string name="memory_format">%d MB</string>
+    <string name="notification_danmaku">Danmaku</string>
+    <string name="notification_headsup">Heads-up</string>
 </resources>
